# MisoTTS-Tamil

./: .gitignore  LICENSE  README.md  download_data.py  evaluate.py  generator.py  infer_tamil.py  models.py  moshi_compat.py  prepare_data.py  pyproject.toml  requirements.txt  run_misotts.py  train_lightning.py  train_on_kaggle.py  upload_to_hf.py  watermarking.py
configs/: tamil_finetune.yaml  tamil_full_finetune.yaml  tamil_romanized.yaml
inference/: onnx_export.py  turbo_model.py  turboquant_kv.py  turbovec.py
kaggle-kernel/: kernel-metadata.json  misotts-tamil-train.py
training/: augmentation.py  dataset.py  tamil_normalizer.py  tamil_phonemizer.py  train.py
